# bin-sitter

./: .gitignore  LICENSE  README.md  emitter.py  finder.py  logger.py  renderer.py  tests.py  ty.toml
examples/: aarch64.elf
examples/nvim/: init.lua
examples/src/: scanner.c
kaitai/: ptrs.ksy  ptrs.py
tree-sitter-elf/: Cargo.toml  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-elf/bindings/python/tests/: test_binding.py
tree-sitter-elf/bindings/python/tree_sitter_elf/: __init__.py  binding.c
tree-sitter-elf/bindings/rust/: build.rs  lib.rs
tree-sitter-elf/src/: grammar.json  node-types.json  parser.c  scanner_tokens.h
tree-sitter-ptrs/: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-ptrs/bindings/python/tests/: test_binding.py
tree-sitter-ptrs/bindings/python/tree_sitter_ptrs/: __init__.py  binding.c
tree-sitter-ptrs/bindings/rust/: build.rs  lib.rs
tree-sitter-ptrs/queries/: highlights.scm
tree-sitter-ptrs/src/: grammar.json  node-types.json  parser.c
